# webellian

./: .gitignore  README.md  init_db.py  load_csv_to_db.py  pyproject.toml  requirements.txt  transactions.csv
data_pipeline/: cli.py  config.py  data_cleaning.py  data_ingestion.py  database.py  logging_config.py  summaries.py
docker/: Dockerfile
notebooks/.ipynb_checkpoints/: example_usage-checkpoint.ipynb
stats_helper/: __init__.py  cli.py  core.py  utils.py  visualization.py
tests/: test_data_cleaning.py  test_stats_helper.py
webellian.egg-info/: SOURCES.txt
